--- a/VenueApplication/Properties/Resource.resx
+++ b/VenueApplication/Properties/Resource.resx
@@ -127,4 +127,8 @@
   <data name="22_Profile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\22_Profile.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="userLogin_SELECT" xml:space="preserve">
+    <value>SELECT * FROM login_credentials
+WHERE lgn_username = @username AND lgn_password = @password;</value>
+  </data>
 </root>
