--- a/VenueApplication/Properties/Resource.resx
+++ b/VenueApplication/Properties/Resource.resx
@@ -128,7 +128,8 @@
     <value>..\Resources\22_Profile.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="userLogin_SELECT" xml:space="preserve">
-    <value>SELECT * FROM login_credentials
+    <value>SELECT * FROM login_credentials JOIN user_wallet
+ON user_wallet.wallet_user_id = login_credentials.lgn_user_id JOIN app_user ON app_user.user_id = user_wallet.wallet_user_id
 WHERE lgn_username = @username AND lgn_password = @password;</value>
   </data>
   <data name="userCreate_INSERT" xml:space="preserve">
@@ -138,13 +139,16 @@ WHERE lgn_username = @username AND lgn_password = @password;</value>
     RETURNING user_id
 ),
 --[INSERT LOGINCREDS]
-INSERT INTO user_wallet(wallet_user_id)
-SELECT user_id FROM inserted_user;</value>
+--[INSERT WALLET]</value>
   </data>
   <data name="userLoginCreds_INSERT" xml:space="preserve">
     <value>inserted_credentials AS (
     INSERT INTO login_credentials(lgn_user_id, lgn_username, lgn_password, lgn_email)
     VALUES ((SELECT user_id FROM inserted_user), @username, @password, @email)
 )</value>
+  </data>
+  <data name="userWallet_INSERT" xml:space="preserve">
+    <value>INSERT INTO user_wallet(wallet_user_id)
+SELECT user_id FROM inserted_user;</value>
   </data>
 </root>
