--- a/VenueApplication/Properties/Resource.resx
+++ b/VenueApplication/Properties/Resource.resx
@@ -117,21 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="vecteezy_home-or-house-symbol-icon-vector-illustration_8070536" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\vecteezy_home-or-house-symbol-icon-vector-illustration_8070536.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="beaverStaidumLoginBackgroundImage.webp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\beaverStaidumLoginBackgroundImage.webp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="22_Profile" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\22_Profile.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="userLogin_SELECT" xml:space="preserve">
     <value>SELECT * FROM login_credentials JOIN user_wallet
 ON user_wallet.wallet_user_id = login_credentials.lgn_user_id JOIN app_user ON app_user.user_id = user_wallet.wallet_user_id
 WHERE lgn_username = @username AND lgn_password = @password;</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="beaverStaidumLoginBackgroundImage.webp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\beaverStaidumLoginBackgroundImage.webp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   <data name="userCreate_INSERT" xml:space="preserve">
     <value>WITH inserted_user AS (
     INSERT INTO app_user(user_fname, user_lname, user_birthday, user_balance, user_type)
@@ -147,8 +140,17 @@ WHERE lgn_username = @username AND lgn_password = @password;</value>
     VALUES ((SELECT user_id FROM inserted_user), @username, @password, @email)
 )</value>
   </data>
+  <data name="22_Profile1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\22_Profile.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="userWallet_INSERT" xml:space="preserve">
     <value>INSERT INTO user_wallet(wallet_user_id)
 SELECT user_id FROM inserted_user;</value>
+  </data>
+  <data name="22_Profile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\22_Profile.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vecteezy_customer-icon-design_53007540" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vecteezy_customer-icon-design_53007540.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
