--- a/VenueApplication/Properties/Resource.resx
+++ b/VenueApplication/Properties/Resource.resx
@@ -117,14 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="userLogin_SELECT" xml:space="preserve">
-    <value>SELECT * FROM login_credentials JOIN user_wallet
-ON user_wallet.wallet_user_id = login_credentials.lgn_user_id JOIN app_user ON app_user.user_id = user_wallet.wallet_user_id
-WHERE lgn_username = @username AND lgn_password = @password;</value>
+  <data name="userWallet_INSERT" xml:space="preserve">
+    <value>INSERT INTO user_wallet(wallet_user_id)
+SELECT user_id FROM inserted_user;</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="beaverStaidumLoginBackgroundImage.webp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\beaverStaidumLoginBackgroundImage.webp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="userLoginCreds_INSERT" xml:space="preserve">
+    <value>inserted_credentials AS (
+    INSERT INTO login_credentials(lgn_user_id, lgn_username, lgn_password, lgn_email)
+    VALUES ((SELECT user_id FROM inserted_user), @username, @password, @email)
+)</value>
   </data>
   <data name="userCreate_INSERT" xml:space="preserve">
     <value>WITH inserted_user AS (
@@ -135,14 +136,16 @@ WHERE lgn_username = @username AND lgn_password = @password;</value>
 --[INSERT LOGINCREDS]
 --[INSERT WALLET]</value>
   </data>
-  <data name="userLoginCreds_INSERT" xml:space="preserve">
-    <value>inserted_credentials AS (
-    INSERT INTO login_credentials(lgn_user_id, lgn_username, lgn_password, lgn_email)
-    VALUES ((SELECT user_id FROM inserted_user), @username, @password, @email)
-)</value>
+  <data name="userLogin_SELECT" xml:space="preserve">
+    <value>SELECT * FROM login_credentials JOIN user_wallet
+ON user_wallet.wallet_user_id = login_credentials.lgn_user_id JOIN app_user ON app_user.user_id = user_wallet.wallet_user_id
+WHERE lgn_username = @username AND lgn_password = @password;</value>
   </data>
-  <data name="userWallet_INSERT" xml:space="preserve">
-    <value>INSERT INTO user_wallet(wallet_user_id)
-SELECT user_id FROM inserted_user;</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="beaverStaidumLoginBackgroundImage.webp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\beaverStaidumLoginBackgroundImage.webp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pngtree-avatar-icon-profile-member-login-vector-isolated-silhouette-transparent-png-image_7111828" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pngtree-avatar-icon-profile-member-login-vector-isolated-silhouette-transparent-png-image_71118281.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
