--- a/VenueApplication/Properties/Resource.resx
+++ b/VenueApplication/Properties/Resource.resx
@@ -221,4 +221,16 @@ WHERE store_id = @storeid;</value>
   <data name="store_DELETE" xml:space="preserve">
     <value>DELETE FROM venue_store WHERE store_id = @storeid;</value>
   </data>
+  <data name="ticketPurchase_INSERT" xml:space="preserve">
+    <value>INSERT INTO ticket_purchase(tktpur_tkt_id, tktpur_date, tktpur_wallet_id)
+VALUES(@ticket_id, @ticket_pur_date, @ticket_wallet_id);
+
+UPDATE venue_ticket
+SET tkt_status = @ticket_status
+WHERE tkt_id = @ticket_id;</value>
+  </data>
+  <data name="ticketPurchase_SELECT" xml:space="preserve">
+    <value>SELECT * FROM ticket_purchase JOIN venue_ticket ON tktpur_tkt_id = tkt_id
+WHERE tktpur_wallet_id = @wallet_id AND tkt_status != 'SCN';</value>
+  </data>
 </root>
